function(ADD_TEST_CASE TEST_NAME TEST_SOURCE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_link_libraries(${TEST_NAME} PRIVATE ${PROJECT_NAME})
    target_link_libraries(${TEST_NAME} PRIVATE GTest::GTest GTest::Main)
    target_include_directories(${TEST_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include)
    target_include_directories(${TEST_NAME} PRIVATE ${PROJECT_SOURCE_DIR}/include/${PROJECT_NAME})
    message(STATUS "TEST_NAME: ${TEST_NAME}") 
    add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endfunction()

file(GLOB TEST_CASES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
foreach(TEST_CASE ${TEST_CASES})
    get_filename_component(TEST_NAME ${TEST_CASE} NAME_WE)
    ADD_TEST_CASE(${TEST_NAME} ${TEST_CASE})
endforeach()